crates/usfm_parser/tests/snapshots/malformed__bad_book_code.snap
---
source: crates/usfm_parser/tests/snapshot.rs
description: "\\id GENESIS bad code\n\\c 1\n\\p \\v 1 x\n"
---
ChapterStart 1@21..25
Para p@26..36
  VerseStart 1@29..33
  Text "x"@34..36
  VerseEnd 1
ChapterEnd 1
--- diagnostics
error[unknown-book-code] @4..11: `GENESIS` is not a book code
