crates/usfm_parser/tests/snapshots/malformed__cell_in_para.snap
---
source: crates/usfm_parser/tests/snapshot.rs
description: "\\id GEN\n\\c 1\n\\p \\v 1 \\tc1 cell marker in para\n"
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..46
  VerseStart 1@16..20
  Char tc1@21..46
    Text "cell marker in para"@26..46
  VerseEnd 1
ChapterEnd 1
--- diagnostics
warning[character-style-not-closed] @21..25: `\tc1` was still open at end of input
