crates/usfm_parser/tests/snapshots/malformed__text_before_marker.snap
---
source: crates/usfm_parser/tests/snapshot.rs
description: "some text before any marker\n\\p hello\n"
---
Para p@0..28
  Text "some text before any marker"@0..28
Para p@28..37
  Text "hello"@31..37
--- diagnostics
warning[content-outside-paragraph] @0..4: content outside a paragraph; an implicit `\p` was opened
